== Change Log

=== SVN
* Propagate global page when using <r:content /> with inherit attribute.
  [Sean Cribbs]

=== 0.6.4 Gem Shaper
* Extract Archive pages into a core extension. Add automatic testing of core 
  extensions from default test task. [Sean Cribbs]
* Add <r:if_children /> and <r:unless_children /> tags. [Andrew Neil]
* Add HTML labels to role checkboxes in user edit template. [zilkey]
* Cleanup whitespace and line-endings in environment.rb. [Bjorn Maeland]
* Fix various SQL Server issues via Rails ticket #8886. [Mark Gallop]
* Refactor locals from _node.rhtml into Admin::NodeHelper. [Sean Cribbs]
* Fix XHTML validation errors in view templates. [Bjorn Maeland]
* Update Prototype and script.aculo.us to 1.6 and 1.8 releases. [Sean Cribbs]
* Fix edge case in tabcontrol.js where tab label is incorrect. [Sean Cribbs]
* Remove duplication in admin.js. [Sean Cribbs]
* Factor TimeZone stuff out of Radiant::Config into a module, fix failing tests.
  [Sean Cribbs]
* Add has_part?, inherits_part?, and has_or_inherits_part? methods to Page.
  [ana]
* Allow setting of local timezone via Radiant::Config and auto-adjustment of times
  in admin UI and <r:date /> tag. [Bodhi Philpot]
* Update to latest Prototype and script.aculo.us and refactor and extract inline 
  Javascript into external files. [Mislav Marohnic]
* Narrow scope of exception to only throw on missing fixture files, allowing 
  invalid yaml errors through. [Daniel Sheppard]
* Added tests to ensure that response_cache stays within the cache dir. 
  [Daniel Sheppard]
* Add assert_requires_login to LoginTestHelper. [Sean Cribbs]
* Make sure tag binding stack is popped when an exception occurs. [jay@jay.fm]
* Clean up some apparent cruft in page.rb [Daniel Sheppard]
* Add logout method to LoginTestHelper. [Sean Cribbs]
* Run single extension tests with rake test:extensions EXT=<extension_name>
  [Brian Skahan]
* Update Javascript libraries to Prototype 1.6.0_rc1 and script.aculo.us 