@@ -5,6 +5,7 @@ The following people have submitted changes which have been applied to the
 core:
 
 === SVN
+* Daniel Sheppard
 * Sean Cribbs
 
 === 0.6.4 Gem Shaper
