@@ -1,6 +1,10 @@
 == Change Log
 
 === SVN
+* Add spec for Radiant::AdminUI and Users scenario. [Sean Cribbs]
+* Import and create boilerplate for RSpec and Scenarios. [Sean Cribbs]
+* Honor config.extensions when running rake test:extensions and also include
+  core extensions. [Daniel Sheppard]
 * Propagate global page when using <r:content /> with inherit attribute.
   [Sean Cribbs]
 
